--- a/app/views/dice_templates/flexible.html.erb
+++ b/app/views/dice_templates/flexible.html.erb
@@ -1,3 +1,11 @@
-<h1><%= @number_of_dice %>d<%= @sides %></h1>
+<h1><%= @dice_rolls %>d<%= @sides %></h1>
 
+<ul>
+<% @dice_rolls.each do |a_roll| %>
 
+<li>
+<%= a_roll %>
+</li>
+
+<% end %>
+</ul>
